--- a/VPU_RTL/cpu_vpu_top.ucf
+++ b/VPU_RTL/cpu_vpu_top.ucf
@@ -35,5 +35,7 @@ NET "clk_25mhz"					LOC = "AL10" | IOSTANDARD = LVCMOS33 | DRIVE = 24 | SLEW = F
 NET "clk_25mhz_n"					LOC="AL11" | IOSTANDARD = LVCMOS33 | DRIVE = 24 | SLEW = FAST;
 NET "dvi_rst"           LOC="AK6" |  IOSTANDARD = LVCMOS33;
 
-NET  "scl_tri"        LOC="U27" | SLEW = SLOW |  DRIVE = 6 | TIG |  IOSTANDARD = LVCMOS18;   # Bank 15, Vcco=1.8V, DCI using 49.9 ohm resistors
-NET  "sda_tri"        LOC="T29" | SLEW = SLOW |  DRIVE = 6 | TIG |  IOSTANDARD = LVCMOS18;   # Bank 15, Vcco=1.8V, DCI using 49.9 ohm resistors
+NET "scl_tri"        LOC="U27" | SLEW = SLOW |  DRIVE = 6 | TIG |  IOSTANDARD = LVCMOS18;   # Bank 15, Vcco=1.8V, DCI using 49.9 ohm resistors
+NET "sda_tri"        LOC="T29" | SLEW = SLOW |  DRIVE = 6 | TIG |  IOSTANDARD = LVCMOS18;   # Bank 15, Vcco=1.8V, DCI using 49.9 ohm resistors
+NET "rxd"       LOC="AG15" | IOSTANDARD = LVCMOS33;  # Bank 4, Vcco=3.3V, No DCI (rxd)
+NET "txd"       LOC="AG20" | IOSTANDARD = LVCMOS33;  # Bank 4, Vcco=3.3V, No DCI (txd)
